objects/vlocity_cmt__ESMQuoteCloneBatchJobIds__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>vlocity_cmt__JobIdList__c</fullName>
        <label>JobIdList</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__allRelatedJobsTriggered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>allRelatedJobsTriggered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__cloneType__c</fullName>
        <label>cloneType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__sourceRecordId__c</fullName>
        <label>sourceRecordId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>ESMQuoteCloneBatchJobIds</label>
</CustomObject>